# magnofit

./: .gitignore  LICENSE.md  README.md  observed_outflows.csv  pyproject.toml
.github/workflows/: run-tests.yml
magnofit/: constants.py  galaxy.py  io.py  simulation.py
magnofit/calc/: luminosity.py  mass.py  time.py
tests/: test_galaxy.py  test_luminosity_calculations.py  test_mass_calculations.py  test_outflow_simulation.py  test_time_calculations.py
tests/data/: expected_outflow_properties.hdf5
tools/: generate.py  generate_from_real_outflows.py  plot_all.sh  plot_bout_vs_lkin.py  plot_outflow_scatter.py  plot_real_outflows.py  predict.py  predict_errors.py  predict_real_data.py  predict_real_data_by_type.py  train.py  utils.py
