[tool.poetry]
name = "magnofit"
version = "0.1.0"
description = ""
authors = [
    "Kastytis Zubovas <kastytis.zubovas@ftmc.lt>",
    "Jonas Bialopetravicius <jonas.bialopetravicius@gmail.com>",
    "Monika Kazlauskaite <Kazlauskaite.Mon@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
pandas = "^1.1.4"
astropy = "^4.2"
tensorflow = "^2.5.0"
h5py = "3.1"
tqdm = "^4.61.2"

[tool.poetry.dev-dependencies]
prospector = "^1.3.1"
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.2.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
