[tool.poetry]
name = "magnofit"
version = "1.1.0"
description = ""
authors = [
    "Kastytis Zubovas <kastytis.zubovas@ftmc.lt>",
    "Jonas Bialopetravicius <jonas.bialopetravicius@gmail.com>",
    "Monika Kazlauskaite <Kazlauskaite.Mon@gmail.com>"
]

[tool.poetry.dependencies]
python = "~3.11"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
pandas = "^2.2.1"
astropy = "^6.0.0"
tensorflow = "^2.15.0.post1"
h5py = "^3.10.0"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
prospector = "^1.10.3"
black = "^24.2.0"
pytest = "^8.0.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
